update some stuffs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=9014
 server.context-path=/demogwt
 security.basic.enabled=false
+
+# Confluence URL for following Content Attachment REST API: https://goo.gl/Gr1S3o
+confluence.url=http://confluence:8090
