Projekt is now running with Confluence.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ security.basic.enabled=false
 
 # Confluence URL for following Content Attachment REST API: https://goo.gl/Gr1S3o
 confluence.url=http://confluence:8090
-confluence.pageid=141525
+confluence.pageid=20351049
