--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- Commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
+
 		<!-- GWT -->
 		<dependency>
 			<groupId>com.google.gwt</groupId>
