--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	<groupId>com.lofidewanto.demo</groupId>
 	<artifactId>document-container-confluence</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>document-container-confluence</name>
@@ -500,8 +500,8 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus</id>
-			<name>releases</name>
-			<url>http://nexus-ep/repository/releases</url>
+			<name>snapshot</name>
+			<url>http://nexus-ep/repository/snapshots</url>
 		</repository>
 	</distributionManagement>
 </project>
